--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <body>
 <!--/////////////////////////////////////////////////////////////////////////-->
     <!-- Dropdown Structure -->
-    <ul id="dropdown1" class="dropdown-content">
+    <!-- <ul id="dropdown1" class="dropdown-content">
       <li><a id="todos" href="#!">Todos</a></li>
       <li><a id="mujer" href="#!">Mujer</a></li>
-      <li><a id="hombre" href="#!">Hombre</a></li>
+      <li><a id="hombre" href="#!">Hombre</a></li> -->
       <!-- <li class="divider"></li> -->
       <!-- <li><a href="#!">three</a></li> -->
-    </ul>
+    <!-- </ul> -->
     
 <!--/////////////////////////////////////////////////////////////////////////-->
     <div class="wrapper run-animation" id="animate">
