agrego style.scss para agregar variables

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <title>Buscador de Comics</title>
   </head>
   <body>
-<!--/////////////////////////////////////////////////////////////////////////-->
+    
+<!--///////////////////SELECT //////////////////////////////////////-->
     <!-- Dropdown Structure -->
     <!-- <ul id="dropdown1" class="dropdown-content">
       <li><a id="todos" href="#!">Todos</a></li>
