pinto cantidad de resultados

--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
 
     <div id="contenedorResultados">
       <h5>RESULTADOS</h5>
-      <div id="cantidadDeResultados">RESULTADOS</div>
+      <div id="cantidadDeResultados">
+        <span id="numResultado"></span>
+        <span>RESULTADOS</span>
+      </div>
       <div class="container-fluid">
     <!-- //////////////////////CARDS////////////////////// -->
         <div id="results" class="row"></div>
