pinto detalles de comic elegido

--- a/index.html
+++ b/index.html
@@ -119,14 +119,40 @@
         <span>RESULTADOS</span>
       </div>
       <div class="container-fluid">
-    <!-- //////////////////////CARDS////////////////////// -->
+        <!-- //////////////////////CARDS////////////////////// -->
         <div id="results" class="row"></div>
         <div id="contenedor" class="contenedor">
-    <!--///////////////////////LODER/////////////////////-->
+          <!--///////////////////////LODER/////////////////////-->
           <span class="loader"></span>
         </div>
       </div>
     </div>
+
+    <!--///////////////////////CONTENEDOR DETALLES/////////////////////-->
+<div class="row" id="seccionDetallesComic">
+    <div class="row">
+      <div class="col s12 m4 l3">
+        <img src="" alt="" id='imagenComic'/>
+      </div>
+      <div class="col s12 m8 l9"></div>
+      <h4 id="titulo"></h4>
+      <h5>Publicado:</h5>
+      <p id="fechaDePublicacion"></p>
+      <h5>Guionistas:</h5>
+      <p id="guionistas"></p>
+      <h5>Descripción:</h5>
+      <p id="detalles"></p>
+    </div>
+
+    <div>
+      <h4>Personajes</h4>
+      <div id="cantidadDeResultados">
+        <span id="numResultadoPersonajes"></span>
+        <span>RESULTADOS</span>
+      </div>
+      <div id="resultsPersonajes" class="row"></div>
+    </div>
+  </div>
 
     <!--///////////////////////////////////PAGINADOR//////////////////////////////////////-->
     <div class="container-paginador">
