fx trae comics de los personajes

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <span id="numResultadoPersonajes"></span>
           <span>RESULTADOS</span>
         </div>
-        <div id="resultsPersonajes" class="row"></div>
+        <div id="comicsDelPersonaje" class="row"></div>
       </div>
       </div>
   
