pinto comics de personajes, nueva fx vs //

--- a/index.html
+++ b/index.html
@@ -186,7 +186,18 @@
       </div>
       </div>
   
-  
+      <!-- personajeDelComic -->
+      <!-- <div>
+        <h4>Personaje de este comic</h4>
+        <div id="cantidadDeResultados">
+          <span id="numResultadoComic"></span>
+          <span>RESULTADOS</span>
+        </div>
+        <div id="personajeDelComic" class="row"></div>
+      </div>
+      </div>
+   -->
+
       <!--///////////////////////////////////PAGINADOR//////////////////////////////////////-->
     <div class="container-paginador">
       <p>Pagina Actual: <span id="pagina-actual"></span></p>
